[package]
name    = "engine"
version = "0.1.0"
edition = "2021"

[dependencies]
winit      = "0.29"
wgpu       = "0.19"
pollster   = "0.3"
log        = "0.4"
env_logger = "0.11"
glam       = "0.25"
noise      = "0.9"
bytemuck   = { version = "1.14", features = ["derive"] }
egui            = "0.27"
egui-wgpu       = "0.27"
egui-winit      = "0.27"
rayon           = "1.10"
image           = { version = "0.25", default-features = false, features = ["png"] }

[profile.dev]
opt-level = 1
